[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_07/Pawn_07_Part_Head.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_07/Pawn_07_Part_Body.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_07/Pawn_07_Part_Face.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_07/Pawn_07_Part_Trax.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_07/Pawn_07_Part_Trax_Back.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pawns/Pawn_07/Pawn_07_Part_Arm.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Pawns/Pawn_07_Parts/Pawn_07_Pic.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_07_Part_Trax:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_07_Part_Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, -21 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_07_Part_Body/Pawn_07_Part_Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -18 ), Vector2( 0, -17 ) ]
}

[node name="Pawn_07_Pic" type="Node2D"]
script = ExtResource( 7 )

[node name="Pawn_07_Part_Body" type="Sprite" parent="."]
position = Vector2( 0, -20.0117 )
texture = ExtResource( 2 )
hframes = 4

[node name="Pawn_07_Part_Arm" type="Sprite" parent="Pawn_07_Part_Body"]
position = Vector2( 12, -2 )
texture = ExtResource( 6 )
hframes = 3
frame = 1

[node name="Pawn_07_Part_Head" type="Sprite" parent="Pawn_07_Part_Body"]
position = Vector2( 0, -17.7383 )
texture = ExtResource( 1 )
hframes = 3

[node name="Pawn_07_Part_Face" type="Sprite" parent="Pawn_07_Part_Body/Pawn_07_Part_Head"]
texture = ExtResource( 3 )
vframes = 4
hframes = 4

[node name="Pawn_07_Part_Trax" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 4 )
vframes = 3
hframes = 4
frame = 8

[node name="Pawn_07_Part_Trax_Back" type="Sprite" parent="Pawn_07_Part_Trax"]
show_behind_parent = true
texture = ExtResource( 5 )
vframes = 3
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
